Fixed image not showing in html file

--- a/login_styles/login.css
+++ b/login_styles/login.css
@@ -12,7 +12,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url("/login_images/lo-fi.jpg") ;
+    background-image: url("../login_images/lo-fi.jpg") ;
     background-size: cover;
     color: ivory;
 }
